Fix support for datalist options after input was password field

If an <input> element is or becomes a password field, it get a sticky flag such
that IsPasswordFieldForAutofill() will always return true. This has been
implemented for <input type="password"> fields that are toggled to <input
type="text"> when the user clicks on some kind of "reveal password" button
(often an eye next to the password field). The password manager needs to
continue treating this as a password field (offer saving, offer
fill-on-account-select, ...).

This CL relaxes the logic in such a way that datalist options are considered if
an <input> element has been a password but currently is not a password anymore.

In case the password manager wants to display a drop-down AND there are
datalist options, there is a conflict. While the input field is empty, the
password manager wins. Once the user starts typing, the password manager popup
disappears and the datalist options are shown if (and only if) they contain the
typed characters.

Bug: 918351
Change-Id: Ifbe19422aa7ef5ee6582bd1cbeaab4bd93aff0fd
Reviewed-on: https://chromium-review.googlesource.com/c/1392342
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Commit-Queue: Dominic Battré <battre@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619396}
Former-commit-id: 9758fada507db2abb745c06dfbee00cbdb38cfc2